# 2025ESWContest_free_1075

./: README.md
ard_tmp/: arduino.ino
src/coordinate_mapping/include/: config.hpp  coordinates.hpp
src/coordinate_mapping/src/: coordinates.cpp
src/glare_detection/: CMakeLists.txt
src/glare_detection/include/: glare_detector.h
src/glare_detection/src/: main.cpp
src/glare_detection/src/gt_labels/: 2_jpg.rf.cd9fccfe4bbfabb04a9e1c5ecc1d1cb3.txt  KakaoTalk_20250817_011549654_01_jpg.rf.75461ab5572e85341e9a2b32bcd6d9df.txt  KakaoTalk_20250817_011549654_02_jpg.rf.a0f317fa1c56d90a0e9105ffc595d82c.txt  KakaoTalk_20250817_011549654_04_jpg.rf.846f90277a2ff0d6f67f3c928888920f.txt  KakaoTalk_20250817_011549654_05_jpg.rf.2f6abf4387767ce364d312aa316f004b.txt  KakaoTalk_20250817_011549654_08_jpg.rf.9a35585b4d448f71edb8ee0564005570.txt  KakaoTalk_20250817_011549654_09_jpg.rf.27c9ff3f1184e02e3ced928b8fee8ea2.txt  KakaoTalk_20250817_011549654_10_jpg.rf.d8e0f411021f65628240891e4ccf91cc.txt  KakaoTalk_20250817_011549654_12_jpg.rf.691a049c6346770d6bc075b0d4973b95.txt
src_tmp/: README.md
src_tmp/src/glare_detection/include/: glare_detector.h  return_position.h
src_tmp/src/glare_detection/src/: glare_detector.cpp  glare_evaluate.cpp  main.cpp
src_tmp/src/glare_detection/src/gt_labels/: 1_jpg.rf.107edea1bd30d20957d5653b87041170.txt  KakaoTalk_20250817_011549654_03_jpg.rf.231fec98ee8caf2e2d8e5bfe218ffb98.txt  KakaoTalk_20250817_011549654_06_jpg.rf.ee0ca5ef5368641c1798614d9919e0ee.txt  KakaoTalk_20250817_011549654_07_jpg.rf.2baaea1bf7dd307139cc6f6fb5990977.txt  (+7 more)
